# docs/swagger.yaml
@@ -832,6 +832,37 @@ paths:
           schema:
             $ref: '#/definitions/rest.Error'
       summary: Returns all active applications
+  /getAdminApplication:
+    get:
+      consumes:
+      - application/json
+      description: Returns all applications currently needing a review by an admin
+      operationId: get-admin-applications
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Access Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Application'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/rest.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/rest.Error'
+      summary: Returns all admin applications
   /getAllApplications:
     get:
       consumes:
@@ -871,13 +902,18 @@ paths:
     get:
       consumes:
       - application/json
-      description: Returns all applications currently needing a review by an admin
-      operationId: get-admin-applications
+      description: Returns the Application matching the given UUID
+      operationId: get-application
       parameters:
       - default: Bearer <Add access token here>
         description: Access Token
         in: header
         name: Authorization
+        required: true
+        type: string
+      - description: The UUID of the specifying Application
+        in: query
+        name: uuid
         required: true
         type: string
       produces:
@@ -886,18 +922,20 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/db.Application'
-            type: array
+            $ref: '#/definitions/db.Application'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/rest.Error'
+        "422":
+          description: Unprocessable Entity
           schema:
             $ref: '#/definitions/rest.Error'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/rest.Error'
-      summary: Returns all admin applications
+      summary: Returns an Application
   /getBusinessTripApplicationExcel:
     get:
       consumes:
